@@ -1,28 +1,0 @@
-/**
- * Copyright 2006 The Apache Software Foundation
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package org.apache.hadoop.hbase;
-
-import java.io.IOException;
-
-import junit.framework.TestCase;
-
-/** Tests region server failover when a region server exits cleanly */
-public class TestRegionServerAbort extends TestCase {
-  /** The test */
-  public void testRegionServerAbort() {
-   // REMOVE THIS CLASS. TEST HAS BEEN MOVED TO TestCleanRegionExit.
-  }
-}
